cmake_minimum_required(VERSION 3.27)
project(MARC C)

set(CMAKE_C_STANDARD 11)

add_executable(untitled1 main.c
        loc.c
        loc.h
        moves.c
        moves.h
        map.c
        map.h
        queue.c
        queue.h
        stack.c
        stack.h
        tree.h
        tree.c
        node.h
        node.c
        random.h
        random.c)
